Fix color for content group template content count in dark mode

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -201,6 +201,14 @@ ul {
   @extend %on-secondary;
 }
 
+.theme-dark .on-primary-variant {
+  color: var(--palette-primary-contrast-200);
+}
+
+.theme-light .on-primary-variant {
+  @extend %primary;
+}
+
 .blue {
   color: var(--blue) !important;
 }
